--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,10 @@
+body {
+  margin: 0;
+}
+
 .container {
   display: grid;
-  border: 1px solid red;
   font-family: sans-serif;
-  margin: 0;
   grid-template-columns: 2fr 1fr 1fr;
   grid-template-rows: 850px 400px 400px 50px;
 }
@@ -90,7 +92,7 @@
   width: 100%;
   height: 50px;
   font-family: sans-serif;
-  background-color: rgb(250, 234, 234);
+  border-bottom: .5px solid #DDDDDD;
 }
 
 .navUl {
