--- a/src/styles.css
+++ b/src/styles.css
@@ -4,14 +4,14 @@ body {
 
 .container {
   display: grid;
-  font-family: sans-serif;
+  font-family: PT sans;
   grid-template-columns: 2fr 1fr 1fr;
   grid-template-rows: 850px 400px 400px 50px;
 }
 
 .item-a {
   grid-area: mission;
-  background-color: rgb(245, 204, 142);
+  /* background-color: rgb(245, 204, 142); */
   grid-column: 1 / 2;
   grid-row: 1 / 2;
   margin: auto 15px auto auto;
@@ -31,11 +31,11 @@ body {
 
 .item-c {
   grid-area: features;
-  background-color: rgb(213, 176, 248);
+  /* background-color: rgb(213, 176, 248); */
   grid-column: 1 / 2;
   grid-row: 2 / 4;
-  margin: auto 55px auto auto;
-  width: 63%;
+  margin: auto;
+  width: 50%;
 }
 
 .item-d {
@@ -43,38 +43,38 @@ body {
   background-color: rgb(244, 247, 211);
   grid-column: 2 / 3;
   grid-row: 2 / 3;
-  width: 90%
+  width: 90%;
 }
 .item-e {
   grid-area: feat2;
-  background-color: rgb(248, 253, 169);
+  /* background-color: rgb(248, 253, 169); */
   grid-column: 3 / 4;
   grid-row: 2 / 3;
   width: 90%;
 }
 .item-f {
   grid-area: feat3;
-  background-color: rgb(204, 203, 140);
+  /* background-color: rgb(204, 203, 140); */
   grid-column: 2 / 3;
   grid-row: 3 / 4;
-  width: 90%
+  width: 90%;
 }
 .item-g {
   grid-area: feat4;
-  background-color: rgb(241, 230, 179);
+  /* background-color: rgb(241, 230, 179); */
   grid-column: 3 / 4;
   grid-row: 3 / 4;
-  width: 90%
+  width: 90%;
 }
 .item-h {
   grid-area: footer;
-  background-color: rgb(20, 149, 167);
+  /* background-color: rgb(20, 149, 167); */
   grid-column: 1 / 4;
   grid-row: 4 / 5;
 }
 
 .button {
-  background-color: #4caf50;
+  /* background-color: #4caf50; */
   /* Green */
   border: none;
   color: white;
@@ -84,7 +84,6 @@ body {
   display: inline-block;
   border-radius: 4px;
   font-size: 16px;
-
   margin: 30px;
 }
 
