Completed landing page with artworks

--- a/src/form.css
+++ b/src/form.css
@@ -89,11 +89,11 @@ span {
   color: #4A89DC
 }
 
-img {
+/* img {
   border-radius: 50%;
   display: block;
   margin: auto;
-}
+} */
 
 .editProfile {
   color: #4285F4;
