--- a/src/styles.css
+++ b/src/styles.css
@@ -15,12 +15,12 @@ body {
   /* background-color: rgb(245, 204, 142); */
   grid-column: 1 / 2;
   grid-row: 1 / 2;
-  margin: auto 14px auto auto;
-  width: 70%;
+  margin: auto 14px auto 125px;
+
 }
 
 .item-a h1 {
-  font-size: 45px;
+  font-size: 65px;
   margin-bottom: 0;
 }
 
@@ -33,29 +33,26 @@ body {
 
 .mission-text {
   font-family: Roboto Light;
-  font-size: 15px;
+  font-size: 20px;
   width: 80%;
 }
 
 .feat-text {
   font-family: Roboto Light;
-  font-size: 12px;
+  font-size: 14px;
   width: 80%;
-  margin-top: 0;
+  /* margin-top: 0; */
 }
 
-.item-b img {
+.faces {
   grid-area: photo;
   /* background-color: rgb(215, 245, 250); */
   grid-column: 2 / 4;
   grid-row: 1 / 2;
-  text-align: center;
-  margin: auto auto auto 75px;
-  height: 50%;
-  width: 35%;
+  margin: 160px 0 0 30px;
+  height: 60%;
   position: absolute;
-  top: 250px;
-  left: 650px;
+
 }
 
 .item-c {
@@ -78,7 +75,7 @@ body {
 }
 
 .item-d img {
-  width: 200px;
+  width: 250px;
 }
 
 .item-e {
@@ -87,10 +84,10 @@ body {
   grid-column: 3 / 4;
   grid-row: 2 / 3;
   width: 80%;
-  margin-left: -30px;
+  margin-left: -40px;
 }
 .item-e img {
-  width: 200px;
+  width: 250px;
 }
 
 .item-f {
@@ -101,7 +98,7 @@ body {
   width: 80%;
 }
 .item-f img {
-  width: 200px;
+  width: 250px;
 }
 
 .item-g {
@@ -110,10 +107,10 @@ body {
   grid-column: 3 / 4;
   grid-row: 3 / 4;
   width: 80%;
-  margin-left: -30px;
+  margin-left: -40px;
 }
 .item-g img {
-  width: 200px;
+  width: 250px;
 }
 
 .item-h {
@@ -140,7 +137,7 @@ body {
 
 .navbar {
   width: 100%;
-  height: 50px;
+  height: 60px;
   font-family: sans-serif;
   border-bottom: .5px solid #DDDDDD;
 }
@@ -150,7 +147,7 @@ body {
   float: right;
   font-size: 16px;
   color: 3EC6FF;
-  margin: 15px 5px 0 0;
+  margin: 20px 10px 0 0;
 }
 
 .navLi {
@@ -160,6 +157,20 @@ body {
 
 .logo {
   height: 33px;
-  margin: 8px 0 0 15px;
+  margin: 12px 0 0 20px;
   float: left;
+}
+
+.big-circle {
+  /* Circle */
+  margin-bottom: -30px;
+  position: absolute;
+  left: -10%;
+  right: 75%;
+  top: 28%;
+  bottom: 20%;
+  border-radius: 50%;
+  background: #F5EDED;
+  /* To push circle to background */
+  z-index: -1;
 }
