--- a/src/form.css
+++ b/src/form.css
@@ -26,10 +26,12 @@
   grid-area: profile;
   grid-column: 1 / 2;
   grid-row: 2 / 3;
-  margin: 20px 0 0 180px;
-  height: 45%;
-  width: 45%;
+  margin: 0;
   /* background-color: sandybrown; */
+    color: #4285F4;
+    text-align: center;
+    font-size: 16px;
+
 }
 
 input {
@@ -95,8 +97,27 @@ span {
   margin: auto;
 } */
 
-.editProfile {
+/* .editProfile {
   color: #4285F4;
   text-align: center;
   font-size: 16px;
+} */
+
+.image-cropper {
+  width: 280px;
+  height: 280px;
+  position: relative;
+  overflow: hidden;
+  border-radius: 50%;
+  margin: 40px 0 0 150px;
+  /* border: 2px solid blue; */
+}
+
+.profile-pic {
+  /* height: 500px; */
+  margin: -10px 0 0 -20px;
+  height: 450px;
+  /* width: 300px; */
+  overflow: hidden;
+  border: 2px solid red;
 }
