--- a/src/jane.css
+++ b/src/jane.css
@@ -2,10 +2,10 @@
   display: grid;
   font-family: Roboto;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 250px 100px 300px 300px 300px;
+  grid-template-rows: 250px 100px 300px 300px 150px;
   width: 80%;
   margin: 0 0 0 100px;
-  border: 2px solid red;
+  /* border: 2px solid red; */
 }
 
 .item-40 {
@@ -17,73 +17,120 @@
 .item-41 {
   grid-column: 1 / 3;
   grid-row: 2 / 3;
-  background-color: rgb(87, 90, 245);
+  margin-top: 30px
+  /* background-color: rgb(87, 90, 245); */
 }
 .item-42 {
   grid-column: 1 / 2;
   grid-row: 3 / 4;
-  width: 60%;
-  margin: 30px 0 0 200px;
+  width: 70%;
+  margin: 30px 0 0 100px;
   /* background-color: rgb(234, 117, 245); */
   border: 3px solid #F5EDED;
   box-sizing: border-box;
   box-shadow: 0px 2px 0px #F5EDED;
   border-radius: 10px;
+  text-align: center;
 }
 .item-43 {
   grid-column: 2 / 3;
   grid-row: 3 / 4;
-  width: 60%;
+  width: 70%;
   border: 3px solid #F5EDED;
   box-sizing: border-box;
   box-shadow: 0px 2px 0px #F5EDED;
   border-radius: 10px;
   margin: 30px 0 0 30px;
   /* background-color: rgb(245, 117, 4); */
-
+  text-align: center;
 }
 .item-44 {
   grid-column: 1 / 2;
   grid-row: 4 / 5;
-  width: 60%;
-  margin: 30px 0 0 200px;
+  width: 70%;
+  margin: 30px 0 0 100px;
   /* background-color: rgb(243, 117, 123); */
   border: 3px solid #F5EDED;
   box-sizing: border-box;
   box-shadow: 0px 2px 0px #F5EDED;
   border-radius: 10px;
+  text-align: center;
 }
 .item-45 {
   grid-column: 2 / 3;
   grid-row: 4 / 5;
-  width: 60%;
+  width: 70%;
   /* background-color: rgb(240, 14, 221); */
   border: 3px solid #F5EDED;
   box-sizing: border-box;
   box-shadow: 0px 2px 0px #F5EDED;
   border-radius: 10px;
   margin: 30px 0 0 30px;
+  text-align: center;
 }
 .item-46 {
   grid-column: 1 / 3;
   grid-row: 5 / 6;
-  background-color: black;
+  /* background-color:#322F2E; */
+  margin-top: 50px;
 }
 
 .hello-jane {
-  font-size: 40px;
-
+  font-size: 48px;
+  margin: 30px 0 0 30px;
 }
 
 .wel {
   font-size: 30px;
   color: black;
+  /* margin: -20px 0 0 0; */
 }
 
 .jane-bubbles {
   position: relative;
   height: 420px;
   float: right;
-  margin: -140px 0 0 -60px;
+  margin: -140px 0 0 -80px;
   /* border: 1px solid blue; */
+}
+
+.yellow-bubble-wrap {
+  margin: -30px 0 0 -10px;
+  position: absolute;
+  /* To push circle to background */
+  z-index: -1;
+}
+
+.yellow-bubble {
+  height: 200px;
+}
+
+.search {
+  border: 1px solid #F55E61;
+  box-sizing: border-box;
+  box-shadow: inset 1px 1px 3px #CCD1D9;
+  border-radius: 3px;
+  height: 50px;
+  width: 70%;
+  text-align: center;
+  font-size: 30px;
+  color:#635858;
+  padding-top: 10px;
+  margin: 0 0 0 90px;
+}
+
+.inside-text {
+  margin: 90px 0 0 25px;
+  width: 80%;
+}
+
+.red-btn {
+  background-color: #F55E61;
+  height: 24px;
+  width: 140px;
+  margin: 0 0 0 50px;
+  padding-top: 5px;
+  border-radius: 3px;
+  color: white;
+  font-size: 14px;
 }
