--- a/src/jane.css
+++ b/src/jane.css
@@ -2,7 +2,7 @@
   display: grid;
   font-family: Roboto;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 250px 100px 300px 300px 150px;
+  grid-template-rows: 250px 60px 300px 350px 150px;
   width: 80%;
   margin: 0 0 0 100px;
   /* border: 2px solid red; */
@@ -48,7 +48,7 @@
   grid-column: 1 / 2;
   grid-row: 4 / 5;
   width: 70%;
-  margin: 30px 0 0 100px;
+  margin: 80px 0 0 100px;
   /* background-color: rgb(243, 117, 123); */
   border: 3px solid #F5EDED;
   box-sizing: border-box;
@@ -65,7 +65,7 @@
   box-sizing: border-box;
   box-shadow: 0px 2px 0px #F5EDED;
   border-radius: 10px;
-  margin: 30px 0 0 30px;
+  margin: 80px 0 0 30px;
   text-align: center;
 }
 .item-46 {
@@ -76,14 +76,15 @@
 }
 
 .hello-jane {
-  font-size: 48px;
-  margin: 30px 0 0 30px;
+  font-size: 52px;
+  font-weight: bold;
+  margin: 60px 0 0 30px;
 }
 
 .wel {
-  font-size: 30px;
+  font-size: 35px;
   color: black;
-  /* margin: -20px 0 0 0; */
+  margin: -3px 0 0 30px;
 }
 
 .jane-bubbles {
@@ -133,4 +134,13 @@
   border-radius: 3px;
   color: white;
   font-size: 14px;
+}
+
+.smiley-crop {
+  margin-top: -50px;
+}
+
+.smiley {
+  width: 100px;
+  margin-top: -200px;
 }
