Completed User Signup page

--- a/src/styles.css
+++ b/src/styles.css
@@ -173,16 +173,16 @@ body {
 }
 
 .footer {
-  height: 150px;
+  height: 180px;
   background-color: #322F2E;
   color: white;
   font-family: Roboto;
   /* font-weight: lighter; */
   font-style: 9px;
-  padding: 90px 0 0 0px;
+  /* padding: 100px 0 0 0px; */
 }
 
 .footer p {
   float: right;
-  margin-right: 30px;
+  margin: 110px 60px 0 0;
 }
