--- a/src/userSignup.css
+++ b/src/userSignup.css
@@ -1,29 +1,40 @@
 .user-container {
   display: grid;
   /* border: 1px solid red; */
-  font-family: PT sans;
+  font-family: Rubik;
   margin: 0;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 250px 300px 250px;
+  grid-template-columns: 150px 300px 300px 300px 100px;
+  grid-template-rows: 270px 300px 200px;
 }
 
 .item-1 {
   grid-area: title;
   /* background-color: rgb(245, 204, 142); */
-  grid-column: 1 / 7;
+  grid-column: 1 / 6;
   grid-row: 1 / 2;
-  font-size: 40px;
-  width: 60%;
-  margin: auto;
-  text-align: center;
+}
+
+.join-title {
+  font-size: 48px;
+  font-weight: bold;
+  /* text-align: center; */
+  margin: 100px 0 0 200px;
+}
+
+.dots {
+  position: relative;
+  height: 350px;
+  float: right;
+  margin: -210px 130px 0 0;
+  /* border: 1px solid blue; */
 }
 
 .item-2 {
   grid-area: users1;
-  /* background-color: rgb(215, 245, 250); */
+  /* background-color: rgb(70, 195, 218); */
   grid-column: 2 / 3;
   grid-row: 2 / 3;
-
+  margin: 0 40px 0 0;
 
 }
 
@@ -32,7 +43,7 @@
   /* background-color: rgb(213, 176, 248); */
   grid-column: 3 / 4;
   grid-row: 2 / 3;
-
+  margin: 0 40px 0 0;
 }
 
 .item-4 {
@@ -40,19 +51,47 @@
   /* background-color: rgb(244, 247, 211); */
   grid-column: 4 / 5;
   grid-row: 2 / 3;
-
+  margin: 0 40px 0 0;
 }
 
 .item-6 {
   grid-area: user-signup;
-  background-color: rgb(186, 226, 245);
+  background-color: #0277b5;
   grid-column: 1 / 7;
   grid-row: 3 / 4;
-  width: 15%;
-  height: 15%;
+  width: 25%;
+  height: 20%;
   margin: auto;
   text-align: center;
   font-size: 20px;
-  padding: 15px 0 0 0;
+  padding: 12px 0 0 0;
+  border-radius: 5px;
+}
+
+.star {
+  width: 150px;
+}
+
+.small-title {
+  font-size: 18px;
+  margin-bottom: 0;
+}
+
+.info-text {
+  font-size: 12px;
+}
+
+.yellow-ball-wrap {
+  margin: 20px 0 0 150px;
+  position: absolute;
+  /* To push circle to background */
+  z-index: -1;
+}
+
+.yellow-ball {
+  height: 180px;
+}
+
+.linkedin {
 
 }
