--- a/src/form.css
+++ b/src/form.css
@@ -26,7 +26,7 @@
   grid-area: profile;
   grid-column: 1 / 2;
   grid-row: 2 / 3;
-  margin: 0;
+  /* margin: 0; */
   /* background-color: sandybrown; */
     color: #4285F4;
     text-align: center;
@@ -109,7 +109,7 @@ span {
   position: relative;
   overflow: hidden;
   border-radius: 50%;
-  margin: 40px 0 0 150px;
+  margin: 40px 0 0 220px;
   /* border: 2px solid blue; */
 }
 
