--- a/src/jane.css
+++ b/src/jane.css
@@ -121,7 +121,7 @@
 }
 
 .inside-text {
-  margin: 90px 0 0 25px;
+  margin: 90px auto;
   width: 80%;
 }
 
@@ -129,7 +129,7 @@
   background-color: #F55E61;
   height: 24px;
   width: 140px;
-  margin: 0 0 0 50px;
+  margin: auto;
   padding-top: 5px;
   border-radius: 3px;
   color: white;
@@ -143,4 +143,9 @@
 .smiley {
   width: 100px;
   margin-top: -200px;
+}
+
+.second-title {
+  font-weight: bold;
+  font-family: Rubik;
 }
